# production-rag

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  rag_agent.py  requirements.txt  requirements.txt 
app/: Guardrails.py  agent.py  extractor.py  graph.py  llm.py  prompt.py  retriever.py  state.py  tool.py
app/test/: test_loader.py
