[project]
name = "agentic-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "ddgs>=9.14.4",
    "dotenv>=0.9.9",
    "fastapi>=0.136.3",
    "huggingface>=0.0.1",
    "jupyter>=1.1.1",
    "langchain>=1.3.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "langchain-experimental>=0.4.2",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "langchain-qdrant>=1.1.0",
    "langchain-redis>=0.2.5",
    "langgraph>=1.2.0",
    "langgraph-checkpoint-redis>=0.4.1",
    "pytest>=9.0.3",
    "qdrant-client>=1.18.0",
    "redis>=7.4.0",
    "sentence-transformers>=5.5.1",
    "uvicorn>=0.48.0",
]
